# Safar

./: README.md  Requirement.MD  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  lib.rs  main.rs  ssh.rs  storage.rs
src-tauri/src/commands/: ssh.rs  storage.rs
src/components/: CommandHistoryModal.tsx  CommandPalette.tsx  CredentialsModal.tsx  DeleteConfirmationModal.tsx  ErrorModal.tsx  FileBrowser.tsx  FileEditor.tsx  GuardianMonitor.tsx  HelpModal.tsx  Icons.tsx  ImportModal.tsx  LockScreen.tsx  QuickConnectModal.tsx  SecuritySettings.tsx  ServerPerformance.tsx  SessionLogs.tsx  SessionStats.tsx  SettingsModal.tsx  SettingsTypes.ts  Sidebar.tsx  SidebarControls.tsx  Terminal.tsx  TransferManager.tsx  TunnelManager.tsx  WelcomeScreen.tsx
src/components/Layout/: StatusBar.tsx  Toolbar.tsx  Workspace.tsx
src/config/: themes.ts
src/hooks/: useFileBrowser.ts  useSessions.ts  useShortcuts.ts  useTerminalConnection.ts
src/styles/: App.css  components.css  filebrowser.css  globals.css  layout.css  settings.css  sidebar.css  terminal.css  workspace.css
src/test/: WelcomeScreen.test.tsx  setup.tsx
src/test/components/: CommandPalette.test.tsx  CredentialsModal.test.tsx  FileBrowser.test.tsx  FileEditor.test.tsx  GuardianMonitor.test.tsx  QuickConnectModal.test.tsx  ServerPerformance.test.tsx  SettingsModal.test.tsx  (+3 more)
src/utils/: history.ts
(+2 files in other folders)
